--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.17",
+    "@types/node-fetch": "^2.5.4",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.1",
@@ -39,6 +40,7 @@
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
     "postcss": "^7.0.24",
     "postcss-jsx": "^0.36.3",
