--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "ts-node --transpile-only ./scripts/build",
+    "build": "node -r ts-node/register -r tsconfig-paths/register ./scripts/build",
     "fmt": "prettier --write --single-quote './src/**/*.{ts,tsx}'",
     "lint:css": "stylelint --custom-syntax postcss-jsx './src/**/styles.ts'",
     "lint:js": "eslint '**/*.{ts,tsx}'",
@@ -17,50 +17,55 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@testing-library/react": "^9.4.0",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.17",
-    "@types/node-fetch": "^2.5.4",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "@types/styled-components": "^4.4.1",
-    "@types/testing-library__react": "^9.1.2",
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.1.2",
+    "@types/dotenv-safe": "^8.1.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "@types/node-fetch": "^2.5.7",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/styled-components": "^5.1.4",
+    "@types/testing-library__react": "^10.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.0",
+    "@typescript-eslint/parser": "^4.8.0",
     "cross-env": "^7.0.2",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-typescript": "^6.3.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-import-resolver-webpack": "^0.12.0",
-    "eslint-plugin-babel": "^5.3.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.5.0",
-    "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.2",
-    "postcss": "^7.0.24",
-    "postcss-jsx": "^0.36.3",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.6",
+    "postcss": "^8.1.7",
+    "postcss-jsx": "^0.36.4",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-markdown": "^4.2.2",
-    "serve": "^11.2.0",
-    "styled-components": "^4.4.1",
-    "styled-reset": "^4.0.8",
-    "stylelint": "^12.0.0",
-    "stylelint-config-prettier": "^8.0.0",
-    "stylelint-config-property-sort-order-smacss": "^5.2.0",
-    "stylelint-config-standard": "^19.0.0",
+    "prettier": "^2.1.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.2",
+    "serve": "^11.3.2",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.1",
+    "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-property-sort-order-smacss": "^7.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.1.0-beta",
+    "typescript-transform-paths": "^2.0.2"
   }
 }
