--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,21 @@
     "skipLibCheck": true,
     "outDir": "dist",
     "sourceMap": true,
-    "target": "es2017",
+    "target": "es2015",
     "jsx": "react",
     "lib": ["es6", "esnext.asynciterable"],
-    "baseUrl": ".",
+    "baseUrl": "./src",
+    "strict": true,
+    "strictNullChecks": true,
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@pages/*": ["./src/pages/*"]
-    }
+      "#/*": ["./*"]
+    },
+    "plugins": [
+      {
+        "transform": "typescript-transform-paths"
+      }
+    ],
   },
-  "exclude": ["node_modules", "**/*.spec.ts"],
-  "include": ["./src"]
+  "include": ["./src", "./scripts", "jest.config.ts"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
