--- a/package.json
+++ b/package.json
@@ -17,55 +17,55 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.1.2",
-    "@types/dotenv-safe": "^8.1.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "@types/node-fetch": "^2.5.7",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "@types/styled-components": "^5.1.4",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/dotenv-safe": "^8.1.2",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.1",
+    "@types/node-fetch": "^2.5.11",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.11",
     "@types/testing-library__react": "^10.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.0",
-    "@typescript-eslint/parser": "^4.8.0",
-    "cross-env": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^7.13.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.1",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.0.1",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.6",
-    "postcss": "^8.1.7",
+    "nodemon": "^2.0.12",
+    "postcss": "^8.3.5",
     "postcss-jsx": "^0.36.4",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^2.1.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-markdown": "^5.0.2",
-    "serve": "^11.3.2",
-    "styled-components": "^5.2.1",
-    "styled-reset": "^4.3.1",
-    "stylelint": "^13.7.2",
+    "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
+    "serve": "^12.0.0",
+    "styled-components": "^5.3.0",
+    "styled-reset": "^4.3.4",
+    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-property-sort-order-smacss": "^7.0.0",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-property-sort-order-smacss": "^7.1.0",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.1.0",
+    "tsconfig-paths": "^3.10.1",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.1.0-beta",
-    "typescript-transform-paths": "^2.0.2"
+    "typescript": "^4.3.5",
+    "typescript-transform-paths": "^3.1.0"
   }
 }
