--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "target": "es2015",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "lib": ["es6", "esnext.asynciterable"],
     "baseUrl": "./src",
     "strict": true,
@@ -21,7 +21,7 @@
       {
         "transform": "typescript-transform-paths"
       }
-    ],
+    ]
   },
   "include": ["./src", "./scripts", "jest.config.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
