--- a/.eslintrc
+++ b/.eslintrc
@@ -1,53 +1,11 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["airbnb-typescript", "prettier"],
+  "extends": ["prettier"],
   "plugins": ["react", "@typescript-eslint"],
-  "env": {
-    "browser": true
-  },
   "parserOptions": {
     "project": "tsconfig.json"
   },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
-    }
-  },
   "rules": {
-    "@typescript-eslint/indent": 0,
-    "@typescript-eslint/quotes": 0,
-    "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0,
-    "react/jsx-props-no-spreading": 0,
-    "import/no-named-as-default": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/prefer-default-export": 0,
-    "import/extensions": 0,
-    "arrow-body-style": 0,
-    "import/order": [
-      "error",
-      {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index"
-        ],
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        },
-        "pathGroups": [
-          {
-            "pattern": "#/**",
-            "group": "internal"
-          }
-        ]
-      }
-    ]
+    "@typescript-eslint/consistent-type-imports": 2
   }
 }
