--- a/package.json
+++ b/package.json
@@ -1,72 +1,66 @@
 {
-  "name": "cv",
-  "description": "Personal CV web app",
+  "name": "@ryanep/cv",
+  "description": "A personal curriculum vitae.",
   "version": "1.0.0",
   "author": "Ryan Elliott-Potter",
+  "license": "MIT",
   "repository": {
     "type": "git"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "node -r ts-node/register -r tsconfig-paths/register ./scripts/build",
+    "build:tailwind": "tailwindcss -i ./src/styles/root.css -o ./dist/styles.css --minify",
     "fmt": "prettier --write './src/**/*.{ts,tsx}'",
-    "lint:css": "stylelint --custom-syntax postcss-jsx './src/**/styles.ts'",
-    "lint:js": "eslint '**/*.{ts,tsx}'",
-    "lint": "npm run lint:css && npm run lint:js",
+    "lint": "eslint '**/*.{ts,tsx}'",
     "test": "jest",
     "precommit": "lint-staged"
   },
   "devDependencies": {
     "@ryanep/prettier-config": "^1.0.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/dotenv-safe": "^8.1.2",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.1",
-    "@types/node-fetch": "^2.5.11",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.11",
+    "@types/html-minifier": "^4.0.2",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^16.0.0",
+    "@types/node-fetch": "^2.6.2",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/testing-library__react": "^10.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.0",
-    "jest": "^27.0.6",
-    "lint-staged": "^11.0.1",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.12",
-    "postcss": "^8.3.5",
-    "postcss-jsx": "^0.36.4",
-    "postcss-syntax": "^0.36.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "html-minifier": "^4.0.0",
+    "husky": "^8.0.1",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
+    "lint-staged": "^13.0.3",
+    "node-fetch": "^2.0.0",
+    "nodemon": "^2.0.19",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-markdown": "^6.0.2",
-    "serve": "^12.0.0",
-    "styled-components": "^5.3.0",
-    "styled-reset": "^4.3.4",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-property-sort-order-smacss": "^7.1.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.1.0",
-    "tsconfig-paths": "^3.10.1",
-    "ttypescript": "^1.5.12",
-    "typescript": "^4.3.5",
-    "typescript-transform-paths": "^3.1.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-markdown": "^6.0.0",
+    "serve": "^14.0.1",
+    "tailwindcss": "^3.1.8",
+    "ts-jest": "^29.0.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "ttypescript": "^1.5.13",
+    "typescript": "^4.8.3",
+    "typescript-transform-paths": "^3.3.1"
   }
 }
