chore: update build script to load data from typescript file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "target": "es2015"
   },
   "exclude": ["node_modules"],
-  "include": ["./src", "./jest", "./scripts", "jest.config.ts"]
+  "include": ["./src", "./jest", "./scripts", "./data", "jest.config.ts"]
 }
