--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "build": "node -r ts-node/register -r tsconfig-paths/register ./scripts/build",
     "build:tailwind": "tailwindcss -i ./src/styles/root.css -o ./dist/styles.css --minify",
     "fmt": "prettier --write './src/**/*.{ts,tsx}'",
-    "lint": "eslint '**/*.{ts,tsx}'",
+    "lint": "eslint '**/*.{ts,tsx,json}'",
     "test": "jest",
     "precommit": "lint-staged"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@ryanep/eslint-config": "^0.0.2",
     "@ryanep/prettier-config": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -28,20 +30,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__react": "^10.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "eslint": "^8.23.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "html-minifier": "^4.0.0",
     "husky": "^8.0.1",
     "jest": "^29.0.3",
