--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,3 +1,5 @@
+# eslint-disable yml/sort-keys
+
 name: Production
 on:
   push:
@@ -14,7 +16,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.13.1'
+          node-version: 12.13.1
       - run: npm install
       - run: npm run lint
   build:
@@ -27,7 +29,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.13.1'
+          node-version: 12.13.1
       - run: npm install
       - run: npm run build
         env:
@@ -49,7 +51,7 @@ jobs:
         with:
           tf_actions_working_dir: ./.infrastructure
           tf_actions_version: 0.12.18
-          tf_actions_subcommand: 'init'
+          tf_actions_subcommand: init
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -65,7 +67,7 @@ jobs:
         with:
           tf_actions_working_dir: ./.infrastructure
           tf_actions_version: 0.12.18
-          tf_actions_subcommand: 'plan'
+          tf_actions_subcommand: plan
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -81,7 +83,7 @@ jobs:
         with:
           tf_actions_working_dir: ./.infrastructure
           tf_actions_version: 0.12.18
-          tf_actions_subcommand: 'apply'
+          tf_actions_subcommand: apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -116,12 +118,12 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: 'dist'
+          SOURCE_DIR: dist
       - name: invalidate cloudfront cache
         uses: chetan/invalidate-cloudfront-action@master
         env:
           DISTRIBUTION: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }}
-          PATHS: '/index.html'
-          AWS_REGION: 'eu-west-2'
+          PATHS: /index.html
+          AWS_REGION: eu-west-2
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
