--- a/package.json
+++ b/package.json
@@ -11,31 +11,36 @@
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "node -r ts-node/register -r tsconfig-paths/register ./scripts/build",
     "build:tailwind": "tailwindcss -i ./src/styles/root.css -o ./dist/styles.css --minify",
-    "fmt": "prettier --write './src/**/*.{ts,tsx}'",
-    "lint": "eslint '**/*.{ts,tsx,json}'",
+    "fmt": "prettier --write ",
+    "lint": "eslint .",
     "test": "jest",
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@ryanep/eslint-config": "^0.1.0",
+    "@ryanep/eslint-config": "^0.9.1",
     "@ryanep/prettier-config": "^1.0.2",
+    "@swc/core": "^1.3.101",
+    "@swc/jest": "^0.2.29",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/html-minifier": "^4.0.2",
     "@types/jest": "^29.0.0",
-    "@types/node": "^16.18.10",
+    "@types/jest-axe": "^3.5.9",
+    "@types/node": "^16.18.68",
     "@types/node-fetch": "^2.6.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__react": "^10.2.0",
-    "clsx": "^1.2.1",
+    "classix": "^2.1.35",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "eslint": "^8.49.0",
     "html-minifier": "^4.0.0",
+    "html-validate": "^8.7.4",
     "husky": "^8.0.1",
     "jest": "^29.0.3",
+    "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "^29.0.3",
     "lint-staged": "^13.0.3",
     "node-fetch": "^2.0.0",
