--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -1,1 +1,4 @@
 FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-20-buster
+
+# AWS Cli
+RUN apt-get update && apt-get -y install --no-install-recommends awscli
