--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,6 @@
   "appPort": ["3000:3000"],
   "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
   "postCreateCommand": "npm install",
-  "runArgs": ["--env-file", ".devcontainer/devcontainer.env"],
   "build": {
     "dockerfile": "./dockerfile"
   },
@@ -11,7 +10,8 @@
   "features": {
     "terraform": "1.9.0",
     "git": "latest",
-    "node": "22.13.0"
+    "node": "22.13.0",
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
   },
   "customizations": {
     "vscode": {
