--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,15 +3,15 @@
   "appPort": ["3000:3000"],
   "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
   "postCreateCommand": "npm install",
-  "build": {
-    "dockerfile": "./dockerfile"
-  },
   "remoteUser": "node",
+  "image": "mcr.microsoft.com/devcontainers/javascript-node:22-bookworm",
   "features": {
-    "terraform": "1.9.0",
-    "git": "latest",
-    "node": "22.13.0",
-    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+    "ghcr.io/devcontainers/features/git:1.3.4": { "version": "2.47.1" },
+    "ghcr.io/devcontainers/features/node:1.6.3": { "version": "22.13.0" },
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1.6.3": {},
+    "ghcr.io/devcontainers-extra/features/act:1.0.15": {
+      "version": "0.2.80"
+    }
   },
   "customizations": {
     "vscode": {
