--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,10 +1,7 @@
 # eslint-disable yml/sort-keys
 name: Production
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 jobs:
   build:
