--- a/package.json
+++ b/package.json
@@ -15,44 +15,42 @@
     "build:css": "tailwindcss -i ./src/styles/root.css -o ./dist/styles.css --minify",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "test": "jest",
+    "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "precommit": "lint-staged"
+    "updates": "npm-check-updates --interactive",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@ryanep/eslint-config": "^1.10.2",
+    "@ryanep/eslint-config": "^1.11.0",
     "@ryanep/prettier-config": "^1.2.2",
-    "@swc/core": "^1.3.101",
-    "@swc/jest": "^0.2.29",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@types/dotenv-safe": "^8.1.2",
-    "@types/html-minifier": "^4.0.2",
-    "@types/jest": "^29.0.0",
-    "@types/jest-axe": "^3.5.9",
-    "@types/node": "^16.18.68",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@tailwindcss/cli": "^4.1.12",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/html-minifier": "^4.0.5",
+    "@types/node": "^22.18.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
     "@types/testing-library__react": "^10.2.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.17.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "cross-env": "^10.0.0",
+    "eslint": "^9.34.0",
     "html-minifier": "^4.0.0",
-    "html-validate": "^8.7.4",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
-    "jest-axe": "^8.0.0",
-    "jest-environment-jsdom": "^29.0.3",
-    "lint-staged": "^13.0.3",
-    "nodemon": "^2.0.19",
-    "postcss": "^8.4.16",
-    "prettier": "^3.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^6.0.0",
-    "serve": "^14.0.1",
-    "tailwindcss": "^3.1.8",
-    "ts-jest": "^29.1.1",
+    "html-validate": "^10.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
+    "nodemon": "^3.1.10",
+    "npm-check-updates": "^18.0.3",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "serve": "^14.2.4",
+    "tailwindcss": "^4.1.12",
     "tsx": "^4.20.5",
-    "typescript": "^5.2.2"
+    "typescript": "^5.9.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4",
+    "vitest-axe": "^0.1.0"
   }
 }
