--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
     "jsx": "react-jsx",
-    "lib": ["dom", "dom.iterable", "es2022"],
+    "target": "esnext",
+    "lib": ["dom", "esnext"],
     "module": "esnext",
     "moduleResolution": "bundler",
+    "esModuleInterop": true,
     "noEmit": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
@@ -18,9 +19,7 @@
     "strict": true,
     "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "target": "es2022"
+    "noImplicitOverride": true
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*"]
+  "include": ["**/*.d.ts", "**/*.mts", "**/*.ts", "**/*.tsx"]
 }
